soroban-sdk/src/tests/trybuild/contracttype_enum_field_name_too_long.rs
use soroban_sdk::contracttype;

#[contracttype]
pub enum MyType {
    Variant1,
    Variant2TooLong,
}

pub fn main() {}
